--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,9 @@
     "angular-bootstrap": "~1.1.2",
     "font-awesome": ">=4.1.0",
     "lodash": "~2.4.1",
-    "angular-ui-router": "~0.2.15"
+    "angular-ui-router": "~0.2.15",
+    "satellizer": "^0.15.5"
+
   },
   "devDependencies": {
     "angular-mocks": "~1.5.0"
