--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,9 @@
     "font-awesome": ">=4.1.0",
     "lodash": "~2.4.1",
     "angular-ui-router": "~0.2.15",
-    "satellizer": "^0.15.5"
+    "satellizer": "^0.15.5",
+    "animate.css": "^3.5.2",
+    "angular-animate": "1.5.2"
 
   },
   "devDependencies": {
